# scponly

./: .gitignore  AUTHOR  BUILDING-JAILS.TXT  CHANGELOG  CONTRIB  COPYING  INSTALL  Makefile  Makefile.in  README  README.IRIX  SECURITY  TODO  aclocal.m4  bootstrap.sh  config.h.in  configure  configure.in  groups.c  helper.c  install.sh  netbsd_getopt_long.c  scponly.8  scponly.8.alternate_manpage  scponly.c  scponly.h  setup_chroot.sh  setup_chroot.sh.in  setup_chroot_dir.sh
build_extras/: README  addscp.sh  groups.c  setup_chroot.sh.RH9  setup_chroot.sh.debian  setup_chroot.sh.ubuntu
build_extras/arch/: Linux.pre.sh  OpenBSD 3.1.post.sh  OpenBSD 3.1.pre.sh
